--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jest -c ./jest.config.json",
     "build": "tsc -p ./tsconfig.json",
-    "build:watch": "npm run build -- --watch"
+    "build:watch": "npm run clean && npm run build -- --watch",
+    "prettier": "prettier --config .prettierrc --write src/*.{ts,tsx}",
+    "clean": "rimraf ./lib"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "generate-changelog": "^1.7.1",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
+    "rimraf": "^2.6.2",
     "ts-jest": "^23.1.3",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
