--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "formatCodeOptions": {
+    "indentSize": 4,
+    "tabSize": 4
+  },
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
@@ -8,7 +12,7 @@
     "jsx": "react",
     "outDir": "lib",
     "declaration": true,
-    "declarationMap": true,
+    "declarationMap": false,
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -24,12 +28,13 @@
     "baseUrl": "./src",
     "paths": {},
     "experimentalDecorators": true,
+    "jsxFactory": "h"
   },
   "files": [
     "src/index.ts"
   ],
   "include": [
-    "src/**/*"
+    "src/index.ts"
   ],
   "exclude": [
     "node_modules",
