--- a/package.json
+++ b/package.json
@@ -3,24 +3,29 @@
   "version": "1.0.0",
   "description": "Pumping Data & Probe Behavior",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest -c ./jest.config.json",
     "build": "tsc -p ./tsconfig.json",
     "build:watch": "npm run clean && npm run build -- --watch",
     "prettier": "prettier --config .prettierrc --write src/*.{ts,tsx}",
-    "clean": "rimraf ./lib"
+    "clean": "rimraf ./lib",
+    "version_up:major": "changelog -M && git add CHANGELOG.md && git commit -m \"updated CHANGELOG.md\" && npm version major",
+    "version_up:minor": "changelog -m && git add CHANGELOG.md && git commit -m \"updated CHANGELOG.md\" && npm version minor",
+    "version_up:patch": "changelog -p && git add CHANGELOG.md && git commit -m \"updated CHANGELOG.md\" && npm version patch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Himenon/PumpProbeJs.git"
   },
+  "files": [
+    "lib",
+    "package.json"
+  ],
   "keywords": [
     "typescript",
     "debug"
   ],
-  "bin": {
-    "pp": "./lib/cli.js"
-  },
   "author": "K.Himeno",
   "license": "MIT",
   "bugs": {
@@ -33,6 +38,7 @@
     "@types/node": "^10.7.1",
     "generate-changelog": "^1.7.1",
     "jest": "^23.5.0",
+    "jest-cli": "^23.5.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.1.3",
