--- a/sample/package.json
+++ b/sample/package.json
@@ -4,15 +4,28 @@
   "description": "Sapmle of pp",
   "main": "index.js",
   "author": "K.Himenon",
-  "license": "MIT",
+  "license": "Unlicense",
   "scripts": {
-    "start": "npx http-server ."
+    "start": "npx http-server .",
+    "build": "webpack --mode development",
+    "prepare": "npx tsc webpack.config.ts --lib es6",
+    "clean": "rimraf ./webpack.config.js ./package-lock.json node_modules"
   },
   "devDependencies": {
-    "http-server": "^0.11.1"
+    "@types/webpack": "^4.4.10",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
+    "ts-loader": "^4.5.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.0.1",
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "express": "^4.16.3",
-    "hyperapp": "^1.2.8"
-  }
+    "hyperapp": "^1.2.8",
+    "pump-probe": "file:../"
+  },
+  "repository": {}
 }
