--- a/sample/package.json
+++ b/sample/package.json
@@ -6,21 +6,25 @@
   "author": "K.Himenon",
   "license": "Unlicense",
   "scripts": {
-    "start": "npx http-server .",
+    "start": "run-p serve build:watch",
     "build": "webpack --mode development",
+    "build:watch": "npm run build -- --watch",
     "prepare": "npx tsc webpack.config.ts --lib es6",
-    "clean": "rimraf ./webpack.config.js ./package-lock.json node_modules"
+    "clean": "rimraf ./webpack.config.js ./package-lock.json node_modules",
+    "serve": "npx webpack-serve"
   },
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/webpack": "^4.4.10",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.11.1",
+    "npm-run-all": "^4.1.3",
     "ts-loader": "^4.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.0.1",
     "webpack": "^4.17.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-serve": "^2.0.2"
   },
   "dependencies": {
     "express": "^4.16.3",
