--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "start": "npm run build:watch",
-    "test": "jest -c ./jest.config.json",
+    "test": "npm run cruiser && npm run test:jest",
+    "test:watch": "npm run test:jest -- --watch",
+    "test:jest": "jest -c ./jest.config.json",
+    "cruiser": "npx dependency-cruiser --validate .dependency-cruiser.json src",
     "build": "tsc -p ./tsconfig.json",
     "build:watch": "npm run clean && npm run build -- --watch",
     "format": "prettier --config .prettierrc --write src/*.{ts,tsx}",
@@ -37,6 +40,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
+    "dependency-cruiser": "^4.5.0",
     "generate-changelog": "^1.7.1",
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
