--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "npm run cruiser && npm run test:jest",
     "test:watch": "npm run test:jest -- --watch",
     "test:jest": "jest -c ./jest.config.json",
+    "server": "node ./lib/server.js",
     "cruiser": "npx dependency-cruiser --validate .dependency-cruiser.json src",
     "build": "tsc -p ./tsconfig.json",
     "build:watch": "npm run clean && npm run build -- --watch",
@@ -37,9 +38,13 @@
   },
   "homepage": "https://github.com/Himenon/PumpProbeJs#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
+    "@types/socket.io": "^1.4.37",
+    "@types/socket.io-client": "^1.4.32",
+    "cors": "^2.8.4",
     "dependency-cruiser": "^4.5.0",
     "generate-changelog": "^1.7.1",
     "jest": "^23.5.0",
@@ -55,6 +60,8 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "hyperapp": "^1.2.8"
+    "hyperapp": "^1.2.8",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   }
 }
