--- a/sample/package.json
+++ b/sample/package.json
@@ -19,6 +19,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "npm-run-all": "^4.1.3",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "ts-loader": "^4.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.0.1",
