--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,10 +41,12 @@
     "jsxFactory": "h"
   },
   "files": [
-    "src/index.ts"
+    "src/index.ts",
+    "src/server.ts"
   ],
   "include": [
-    "src/index.ts"
+    "src/index.ts",
+    "src/server.ts"
   ],
   "exclude": [
     "node_modules",
