--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Data Tunnel",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "bin": {
+    "web2pdf": "./lib/cli.js"
+  },
   "scripts": {
     "start": "npm run build:watch",
     "test": "npm run cruiser && npm run test:jest",
     "test:watch": "npm run test:jest -- --watch",
     "test:jest": "jest -c ./jest.config.json",
     "server": "node ./lib/server.js",
+    "cli": "node ./lib/cli.js",
     "cruiser": "dependency-cruiser --validate .dependency-cruiser.json src",
     "build": "tsc -p ./tsconfig.json",
     "build:watch": "npm run clean && npm run build -- --watch",
@@ -39,9 +43,11 @@
   },
   "homepage": "https://github.com/Himenon/PumpProbeJs#readme",
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/meow": "^4.0.1",
     "@types/node": "^10.7.1",
     "@types/socket.io": "^1.4.37",
     "@types/socket.io-client": "^1.4.32",
@@ -59,9 +65,11 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "hyperapp": "^1.2.8",
+    "meow": "^5.0.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   }
