--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
       - run:
           name: build
-          command: npm install && npm run build
+          command: yarn install && yarn run build
       - run: 
           name: Publich package
           command: npm publish ./
